# gvim-chop

./: Notes.md  Readme.md  build32.bat  build64.bat
autoload/: GvimChop.vim  chop.vim  rust-vim-libcall.vim
rust-lib/: .gitignore  Readme.md  build_common.bat
rust-lib/src/: lib.rs  manipulate.rs
rust-lib/src/manipulate/: flags.rs
rust-module/: .gitignore  BuildNotes.md  Cargo.toml  build32.bat  build64.bat  build_common.bat  first_time_setup.bat
rust-module/gvim-manipulation/: Cargo.toml
rust-module/gvim-manipulation/src/: lib.rs
rust-module/src/: lib.rs  main.rs  manipulate.rs
rust-module/src/manipulate/: flags.rs  message.rs
