[package]
name = "rust-module"
version = "0.1.0"
authors = ["Steven <steven.s32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gvim_chop"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
gvim_manipulation = { path = "gvim-manipulation" }
